# sourceror

./: .gitignore  CLAUDE.md  LICENSE  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cite_verify/: README.md  __main__.py  cache.py  cli.py  config.py
cite_verify/apis/: base.py  crossref.py  openalex.py  semantic_scholar.py
cite_verify/parsers/: bibtex.py
cite_verify/reporting/: markdown.py  models.py
cite_verify/verification/: existence.py  metadata.py  relevance.py
sourceror/: README.md  __init__.py  __main__.py  cli.py  config.py  credentials.py
sourceror/apis/: base.py  crossref.py  openalex.py  semantic_scholar.py
sourceror/parsers/: bibtex.py  latex.py  pdf.py
sourceror/reporting/: markdown.py  models.py
sourceror/verification/: existence.py  metadata.py  relevance.py
tests/: test_cli.py  test_credentials.py  test_existence.py  test_metadata.py  test_models.py  test_parsers.py  test_pdf_parser.py  test_report.py
