[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cite-verify"
version = "0.1.0"
description = "Verify academic citations against CrossRef, Semantic Scholar, and OpenAlex"
requires-python = ">=3.11"
dependencies = [
    "bibtexparser>=2.0.0b7",
    "httpx>=0.27",
    "tqdm>=4.66",
]

[project.optional-dependencies]
llm = ["anthropic>=0.39"]

[project.scripts]
cite-verify = "cite_verify.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cite_verify*"]
