[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sourceror"
version = "0.2.0"
description = "Verify academic citations against CrossRef, Semantic Scholar, and OpenAlex. Supports BibTeX and PDF input."
readme = "sourceror/README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Steven Jordaan"},
]
keywords = ["bibtex", "citations", "academic", "verification", "crossref", "doi", "pdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

dependencies = [
    "bibtexparser>=2.0.0b7",
    "httpx>=0.27",
    "tqdm>=4.66",
]

[project.optional-dependencies]
llm = ["anthropic>=0.39"]
pdf = ["pymupdf>=1.24", "pymupdf4llm>=0.0.10"]
keyring = ["keyring>=25.0"]
all = ["sourceror[llm,pdf,keyring]"]

[project.urls]
Homepage = "https://github.com/SJ-Jordaan/sourceror"
Repository = "https://github.com/SJ-Jordaan/sourceror"
Issues = "https://github.com/SJ-Jordaan/sourceror/issues"

[project.scripts]
sourceror = "sourceror.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sourceror*"]
